// CinePrime — movie_db v2.0
// Paste vào https://dbdiagram.io để xem sơ đồ

// ─── LOOKUP TABLES ────────────────────────────────────────────────────────────

Table genre {
  genre_id    bigint      [pk, increment]
  genre_name  varchar(100) [not null, unique]
  genre_code  varchar(50)  [not null, unique, note: 'slug: action, romance...']
  created_at  timestamptz  [not null, default: `now()`]
}

Table age_rating {
  rating_id    smallint    [pk, increment]
  rating_code  varchar(5)  [not null, unique, note: 'P | K | T13 | T16 | T18 | C']
  min_age      smallint    [not null, default: 0]
  description  varchar(255) [not null]
}

Table screening_format {
  format_id    smallint      [pk, increment]
  format_code  varchar(20)   [not null, unique, note: '2D | 3D | IMAX | 4DX | SCREENX | ATMOS']
  format_name  varchar(100)  [not null]
  description  varchar(255)
  surcharge    decimal(10,2) [not null, default: 0, note: 'Phụ phí thêm vào giá vé cơ bản']
}

Table production_company {
  company_id   bigint       [pk, increment]
  name         varchar(255) [not null, unique]
  country      varchar(100)
  logo_url     varchar(500)
  website_url  varchar(500)
  created_at   timestamptz  [not null, default: `now()`]
}

// ─── PERSON ───────────────────────────────────────────────────────────────────

Table person {
  person_id    bigint       [pk, increment]
  full_name    varchar(255) [not null]
  birth_date   date
  nationality  varchar(100)
  photo_url    varchar(500)
  biography    text
  tmdb_id      integer      [unique, note: 'TMDB person ID — dedup khi import từ API']
  created_at   timestamptz  [not null, default: `now()`]
  updated_at   timestamptz  [not null, default: `now()`]
}

// ─── MOVIE ────────────────────────────────────────────────────────────────────

Table movie {
  movie_id          bigint        [pk, increment]
  tmdb_id           integer       [unique]
  imdb_id           varchar(20)   [unique, note: 'tt1234567']
  original_title    varchar(500)  [not null]
  original_language char(2)       [not null, default: 'en', note: 'ISO 639-1']
  duration_minutes  smallint      [not null, note: 'CHECK 1–600']
  release_date      date
  age_rating_id     smallint
  company_id        bigint
  country           varchar(100)
  poster_url        varchar(500)
  thumbnail_url     varchar(500)
  trailer_url       varchar(500)
  synopsis          text
  status            varchar(20)   [not null, default: 'DRAFT', note: 'DRAFT | PENDING_REVIEW | REJECTED | COMING_SOON | NOW_SHOWING | SUSPENDED | ENDED']
  suspended_reason  text          [note: 'Bắt buộc ghi khi set SUSPENDED']
  rejection_note    text          [note: 'Bắt buộc ghi khi ADMIN set REJECTED']
  created_at        timestamptz   [not null, default: `now()`]
  updated_at        timestamptz   [not null, default: `now()`]
  created_by        varchar(100)
  updated_by        varchar(100)
}

Table movie_translation {
  movie_id       bigint       [not null]
  language_code  char(2)      [not null, note: 'ISO 639-1: vi | en | ko | ja | zh']
  title          varchar(500) [not null]
  synopsis       text
  created_at     timestamptz  [not null, default: `now()`]

  indexes {
    (movie_id, language_code) [pk]
  }
}

Table movie_genre {
  movie_id   bigint  [not null]
  genre_id   bigint  [not null]

  indexes {
    (movie_id, genre_id) [pk]
  }
}

Table movie_format {
  movie_id   bigint    [not null]
  format_id  smallint  [not null]

  indexes {
    (movie_id, format_id) [pk]
  }
}

Table movie_cast {
  cast_id         bigint       [pk, increment]
  movie_id        bigint       [not null]
  person_id       bigint       [not null]
  role_type       varchar(20)  [not null, note: 'ACTOR | DIRECTOR | WRITER | PRODUCER | COMPOSER']
  character_name  varchar(255) [note: 'Chỉ điền cho ACTOR']
  billing_order   smallint     [note: '1 = top billing']

  indexes {
    (movie_id, person_id, role_type) [unique]
  }
}

Table movie_action_log {
  id                 varchar(36)  [pk, note: 'UUID']
  movie_id           bigint
  account_id         varchar(100) [not null]
  action_type        varchar(50)  [not null, note: 'CREATE | UPDATE | SUSPEND | ACTIVATE | DELETE']
  action_description text
  old_status         varchar(20)
  new_status         varchar(20)
  note               text
  created_at         timestamptz  [not null, default: `now()`]
}

// ─── CINEMA ROOM ──────────────────────────────────────────────────────────────

Table cinema_room {
  cinema_room_id    bigint       [pk, increment]
  cinema_room_name  varchar(100) [not null]
  room_type         varchar(20)  [not null, default: 'STANDARD', note: 'STANDARD | LARGE | IMAX | 4DX | SCREENX']
  total_seat_capacity integer    [not null, default: 0]
  status            varchar(30)  [not null, default: 'ACTIVE', note: 'ACTIVE | MAINTENANCE | TEMPORARILY_UNAVAILABLE | CLOSED']
  maintenance_note  text
  created_at        timestamptz  [not null, default: `now()`]
  updated_at        timestamptz  [not null, default: `now()`]
  created_by        varchar(100)
  updated_by        varchar(100)
}

Table cinema_room_maintenance {
  maintenance_id  bigint       [pk, increment]
  cinema_room_id  bigint       [not null]
  reason          text         [not null]
  severity        varchar(20)  [not null, default: 'MEDIUM', note: 'LOW | MEDIUM | HIGH | CRITICAL']
  started_at      timestamptz  [not null, default: `now()`]
  resolved_at     timestamptz
  resolved        boolean      [not null, default: false]
  resolution_note text
  created_by      varchar(100) [not null]
  created_at      timestamptz  [not null, default: `now()`]
}

// ─── SEAT ─────────────────────────────────────────────────────────────────────

Table seat {
  seat_id         bigint        [pk, increment]
  cinema_room_id  bigint        [not null]
  seat_code       varchar(10)   [not null, note: 'VD: A1, B12']
  row_label       varchar(5)    [not null, note: 'VD: A, B, AA — cho layout map']
  col_number      smallint      [not null]
  seat_type       varchar(20)   [not null, default: 'STANDARD', note: 'STANDARD | VIP | COUPLE | SWEETBOX']
  status          varchar(20)   [not null, default: 'ACTIVE', note: 'ACTIVE | INACTIVE | MAINTENANCE']
  base_price      decimal(10,2) [not null, default: 0]
  created_at      timestamptz   [not null, default: `now()`]
  updated_at      timestamptz   [not null, default: `now()`]

  indexes {
    (cinema_room_id, seat_code) [unique]
    (cinema_room_id, row_label, col_number) [unique]
  }
}

// ─── SHOW TIME ────────────────────────────────────────────────────────────────

Table show_time {
  showtime_id       bigint        [pk, increment]
  movie_id          bigint        [not null]
  cinema_room_id    bigint        [not null]
  format_id         smallint
  language_code     char(2)       [not null, default: 'vi', note: 'Ngôn ngữ âm thanh']
  subtitle_code     char(2)       [note: 'NULL = không có phụ đề']
  show_date         date          [not null]
  start_time        time          [not null]
  end_time          time          [not null]
  base_price        decimal(10,2) [not null, default: 0]
  status            varchar(20)   [not null, default: 'SCHEDULED', note: 'SCHEDULED | ON_SALE | CANCELLED | COMPLETED | SUSPENDED']
  cancellation_reason text
  cancelled_at      timestamptz
  cancelled_by      varchar(100)
  total_seats       integer       [not null, default: 0]
  sold_seats        integer       [not null, default: 0]
  created_at        timestamptz   [not null, default: `now()`]
  updated_at        timestamptz   [not null, default: `now()`]
  created_by        varchar(100)
  updated_by        varchar(100)
}

// ─── SHOWTIME SEAT ────────────────────────────────────────────────────────────

Table showtime_seat {
  showtime_seat_id    bigint        [pk, increment]
  showtime_id         bigint        [not null]
  seat_id             bigint        [not null]
  seat_code           varchar(10)   [not null, note: 'Snapshot tại thời điểm tạo']
  seat_type           varchar(20)   [not null, default: 'STANDARD']
  price               decimal(10,2) [not null]
  status              varchar(20)   [not null, default: 'AVAILABLE', note: 'AVAILABLE | RESERVED | SOLD | BLOCKED | CANCELLED']
  reserved_at         timestamptz
  reserved_expires_at timestamptz   [note: 'Job cleanup ghế RESERVED quá hạn']
  booking_id          varchar(36)   [note: 'UUID từ booking-service (cross-DB, không FK)']

  indexes {
    (showtime_id, seat_id) [unique]
  }
}

// ─── RELATIONSHIPS ────────────────────────────────────────────────────────────

// movie → lookups
Ref: movie.age_rating_id > age_rating.rating_id
Ref: movie.company_id    > production_company.company_id

// movie translations & junctions
Ref: movie_translation.movie_id > movie.movie_id [delete: cascade]
Ref: movie_genre.movie_id       > movie.movie_id [delete: cascade]
Ref: movie_genre.genre_id       > genre.genre_id [delete: restrict]
Ref: movie_format.movie_id      > movie.movie_id [delete: cascade]
Ref: movie_format.format_id     > screening_format.format_id [delete: restrict]
Ref: movie_cast.movie_id        > movie.movie_id [delete: cascade]
Ref: movie_cast.person_id       > person.person_id [delete: restrict]
Ref: movie_action_log.movie_id  > movie.movie_id [delete: set null]

// cinema room
Ref: cinema_room_maintenance.cinema_room_id > cinema_room.cinema_room_id
Ref: seat.cinema_room_id                    > cinema_room.cinema_room_id [delete: cascade]

// showtime
Ref: show_time.movie_id       > movie.movie_id        [delete: restrict]
Ref: show_time.cinema_room_id > cinema_room.cinema_room_id [delete: restrict]
Ref: show_time.format_id      > screening_format.format_id

// showtime seat
Ref: showtime_seat.showtime_id > show_time.showtime_id [delete: cascade]
Ref: showtime_seat.seat_id     > seat.seat_id
